Edits to formatting and new code challenge

--- a/Codewars/8 Kyu - Find Multiples.ipynb
+++ b/Codewars/8 Kyu - Find Multiples.ipynb
@@ -8,7 +8,7 @@
    "outputs": [],
    "source": [
     "'''\n",
-    "*Find Multiples*\n",
+    "*8 Kyu - Find Multiples*\n",
     "\n",
     "In this simple exercise, you will build a program that takes a value, integer, and returns a list of its multiples up to another value, limit. \n",
     "If limit is a multiple of integer, it should be included as well. \n",
@@ -104,7 +104,13 @@
    "cell_type": "code",
    "execution_count": 3,
    "id": "6dfee0e7-3cc0-49b8-bf0a-427962b67b7b",
-   "metadata": {},
+   "metadata": {
+    "collapsed": true,
+    "jupyter": {
+     "outputs_hidden": true
+    },
+    "tags": []
+   },
    "outputs": [
     {
      "data": {
@@ -123,14 +129,6 @@
     "# A solution for creating a lambda function, functionally identical to our primary solution, but more appropriate in certain, specific contexts\n",
     "# Worth considering for its concise and readable qualities"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "667f5089-0f28-473e-8022-efcafc639f30",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
