--- a/Codewars/8 Kyu/8 Kyu - Expressions Matter.ipynb
+++ b/Codewars/8 Kyu/8 Kyu - Expressions Matter.ipynb
@@ -8,7 +8,7 @@
    "outputs": [],
    "source": [
     "'''\n",
-    "*8 Kyu - Expressions*\n",
+    "*8 Kyu - Expressions Matter*\n",
     "\n",
     "Given three integers a, b, c, return the largest number obtained after inserting the following operators and brackets: +, *, ()\n",
     "In other words , try every combination of a,b,c with [*+()] , and return the maximum obtained\n",
